feature: dev와 충돌 해결 및 연관검색어 프론트와 연결